# mordhub-backend

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  docker-compose.yml  restart.sh  start.sh  test.md
db/: schema.sql
db/migrations/: 20190613202344_create_initial_tables.sql
markdown/guides/: test.md
migrations/2019-05-06-223534_create_users/: down.sql  up.sql
src/: app.rs  error.rs  files.rs  main.rs  models.rs  schema.rs  state.rs
src/db/: manager.rs  mod.rs  queries.rs
src/models/: image.rs  like.rs  loadout.rs  mod.rs  user.rs
src/routes/: api.rs  auth.rs  guides.rs  index.rs  loadout.rs  meta.rs  mod.rs  user.rs
static/: 404.html
static/css/: site.css
templates/: about.html  index.html  user.html
templates/guides/: list.html
templates/loadouts/: create.html  list.html  single.html
