[package]
name = "mordhub"
version = "0.1.0"
authors = ["Matt Taylor <mstaveleytaylor@gmail.com>"]
edition = "2018"
build = "build.rs"

[workspace]
exclude = ["vendor/*"]

[build-dependencies]
pulldown-cmark = { version = "0.5", default-features = false, features = ["simd"] }

[dependencies]
actix-web = "1.0.0-rc"
diesel = { version = "1.4.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
r2d2 = "0.8.4"
dotenv = "0.13.0"
openssl = "0.10.21"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
env_logger = "0.6.1"
tera = "1.0.0-beta.6"
reqwest = "0.9.16"
log = "0.4.6"
serde_urlencoded = "0.5.5"
futures = "0.1.27"
actix-rt = "0.2.2"
url = "1.7.2"
failure = "0.1.5"
actix-files = "0.1.0"
mordhau-loadout-parser = "0.1.0"
