[package]
name = "mordhub"
version = "0.1.0"
authors = ["Matt Taylor <mstaveleytaylor@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
pulldown-cmark = { version = "0.5", default-features = false, features = ["simd"] }

[dependencies]
actix-web = "1.0.0"
dotenv = "0.13.0"
openssl = "0.10.21"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
env_logger = "0.6.1"
reqwest = "0.9.16"
log = "0.4.6"
serde_urlencoded = "0.5.5"
futures = "0.1.27"
actix-rt = "0.2.2"
url = "1.7.2"
failure = "0.1.5"
actix-files = "0.1.1"
mordhau-loadout-parser = "0.1.0"
askama = "0.8.0"
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.3.0"
bb8-postgres = "0.3.0"
lazy_static = "1.3.0"
