[package]
name = "mordhub"
version = "0.1.0"
authors = ["Matt Taylor <mstaveleytaylor@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
pulldown-cmark = { version = "0.5.2", default-features = false, features = ["simd"] }

[dependencies]
actix-web = { version = "1.0.0", features = ["ssl"] }
dotenv = "0.14.1"
openssl = "0.10.23"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
env_logger = "0.6.1"
log = "0.4.6"
futures = "0.1.27"
actix-rt = "0.2.2"
url = "1.7.2"
failure = "0.1.5"
actix-files = "0.1.2"
mordhau-loadout-parser = "0.1.0"
askama = "0.8.0"
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-chrono-0_4"] }
#tokio-postgres = { version = "0.4.0-rc.2", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.6", features = ["serde"] }
lazy_static = "1.3.0"
l337 = { path = "vendor/l337" }
derive_builder = "0.7.2"
steam-auth = "0.3.0"
